@@ -1,7 +1,7 @@
 package es.uclm.delivery.presentacion;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -21,13 +21,14 @@ public class IUBusqueda {
     @Autowired
     private ClienteDAO clienteDAO;
 
+    private static final String CLIENTE_NO_ENCONTRADO = "Cliente no encontrado";
+
     public List<Restaurante> buscarRestaurantesPorCodigoPostal(String codigoPostal) {
         return restauranteDAO.findByCodigoPostal(codigoPostal);
     }
 
     public void marcarFavorito(Long idRestaurante) {
-        // Obtener el cliente actual (esto es solo un ejemplo, debes obtener el cliente autenticado)
-        Cliente cliente = clienteDAO.findById(1L).orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
+        Cliente cliente = clienteDAO.findById(1L).orElseThrow(() -> new RuntimeException(CLIENTE_NO_ENCONTRADO));
         Restaurante restaurante = restauranteDAO.findById(idRestaurante).orElseThrow(() -> new RuntimeException("Restaurante no encontrado"));
         
         ClienteFavoritos favorito = new ClienteFavoritos();
@@ -39,8 +40,7 @@ public class IUBusqueda {
     }
 
     public void desmarcarFavorito(Long idRestaurante) {
-        // Obtener el cliente actual (esto es solo un ejemplo, debes obtener el cliente autenticado)
-        Cliente cliente = clienteDAO.findById(1L).orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
+        Cliente cliente = clienteDAO.findById(1L).orElseThrow(() -> new RuntimeException(CLIENTE_NO_ENCONTRADO));
         ClienteFavoritos favorito = cliente.getFavoritos().stream()
             .filter(f -> f.getRestaurante().getId().equals(idRestaurante))
             .findFirst()
@@ -51,14 +51,16 @@ public class IUBusqueda {
     }
 
     public List<Restaurante> listarFavoritos() {
-        // Obtener el cliente actual (esto es solo un ejemplo, debes obtener el cliente autenticado)
-        Cliente cliente = clienteDAO.findById(1L).orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
+        Cliente cliente = clienteDAO.findById(1L).orElseThrow(() -> new RuntimeException(CLIENTE_NO_ENCONTRADO));
         return cliente.getFavoritos().stream().map(ClienteFavoritos::getRestaurante).toList();
     }
 
     public Restaurante obtenerRestaurante(Long restauranteId) {
         Restaurante restaurante = restauranteDAO.findById(restauranteId).orElseThrow(() -> new RuntimeException("Restaurante no encontrado"));
         List<CartaMenu> cartasMenu = restauranteDAO.findCartasMenuByRestauranteId(restauranteId);
+        if (restaurante.getCartasMenu() == null) {
+            restaurante.setCartasMenu(new ArrayList<>()); // Inicializar la colección cartasMenu
+        }
         restaurante.getCartasMenu().clear();
         restaurante.getCartasMenu().addAll(cartasMenu);
         return restaurante;
@@ -67,20 +69,18 @@ public class IUBusqueda {
     public List<Restaurante> obtenerRestaurantesDestacados() {
         return restauranteDAO.obtenerRestaurantesAleatorios(4).stream()
                 .filter(r -> r.getNombre() != null && r.getDireccion() != null)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Cliente obtenerClienteActual() {
-        // Obtener el nombre de usuario del cliente autenticado
         Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
         String username;
-        if (principal instanceof UserDetails) {
-            username = ((UserDetails) principal).getUsername();
+        if (principal instanceof UserDetails userDetails) {
+            username = userDetails.getUsername();
         } else {
             username = principal.toString();
         }
 
-        // Buscar el cliente por el nombre de usuario
-        return clienteDAO.findByUsername(username).orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
+        return clienteDAO.findByUsername(username).orElseThrow(() -> new RuntimeException(CLIENTE_NO_ENCONTRADO));
     }
 }
